--- a/package.json
+++ b/package.json
@@ -32,7 +32,13 @@
     "class-validator": "^0.14.2",
     "class-transformer": "^0.5.1",
     "@nestjs/swagger": "^11.2.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "@nestjs/passport": "^11.0.5",
+    "bcrypt": "^5.0.2",
+    "passport-jwt": "^4.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "passport": "^0.7.0",
+    "@nestjs/config": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -46,6 +52,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "@types/bcrypt": "^5.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
