--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 services:
+  app:
+    build:
+      context: .
+    env_file:
+      - .env
+    ports:
+      - "3001:3001"
+    depends_on:
+      db:
+        condition: service_healthy
+    command: >
+      sh -c "npm run typeorm -- migration:run --dataSource ./dist/ormconfig.js && node dist/src/main.js"
   db:
     image: mysql:8
+    volumes:
+      - ./mysql_db:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=my-nestjs-db
       - MYSQL_USER=tolik
@@ -8,3 +22,9 @@ services:
       - MYSQL_ROOT_PASSWORD=tolikSuperPass
     ports:
       - "3307:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "tolik", "-ptolikSuperPass"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 5s
