--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,14 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
-    ports:
-      - "3001:3001"
+#    ports:
+#      - "3001:3001"
     depends_on:
       db:
         condition: service_healthy
     command: >
-      sh -c "npm run migration:run && npm run start:dev"
+      sh -c "npm run migration:run && npm run start"
+
   db:
     image: mysql:8
     volumes:
@@ -23,11 +24,21 @@ services:
       - MYSQL_USER=tolik
       - MYSQL_PASSWORD=tolikPass
       - MYSQL_ROOT_PASSWORD=tolikSuperPass
-    ports:
-      - "3307:3306"
+#    ports:
+#      - "3307:3306"
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "tolik", "-ptolikSuperPass"]
       interval: 5s
       timeout: 3s
       retries: 10
       start_period: 5s
+
+  web:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    depends_on:
+      - app
+    volumes:
+      - ./client:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
